  Graphics:
    - Ore nodes are now highlighted when a mining drill is in hand
  Control:
    - Localised "jump" control
    - Added sort order to custom inputs
  Combat Balancing:
    - Player now only regenerates to 30HP
    - Time before auto-heal kicks in increased to match Satisfactory (50s)
    - Player now respawns at 30HP after dying
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2020.11.10
  Ease of use:
    - "Add 5" and "Add Stack" options added to Recipe Browser buttons
  Bugfixes:
    - Various optimisations and performance improvements
    - Exiting a Jetpack or Parachute or Hyper Tube would crash the game
    - Xeno-basher didn't affect flying enemies
    - Entities with custom GUIs now auto-close when you move away or the entity is destroyed
    - Fixed some crashes with the Object Scanner and Beacons
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 2020.11.11
  Changes:
    - A Parachute can now also be used to avoid damage when unsafe-landing from a Jump Pad
  Gui:
    - Added Tier markers for the HUB tiers
  Bugfixes:
    - Better handling of "research recipes" that are already done
    - When the last entity of a Hypertube is an Underground, you exited at the wrong spot
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2020.11.13
  Features:
    - The start of Freeplay is now Onboarding, with objective-based tutorial to get you started.
  Bugfixes:
    - Catastrophic bug after save/load! Whoops! So all save files are kinda knackered...
---------------------------------------------------------------------------------------------------
Version: 0.2.1
Date: 2020.11.??
  Gui:
    - Added "flow rate" GUI when opening pipes
  Bugfixes:
    - As HUB Upgrade milestones are completed, the HUB now checks for collision with the player.