@@ -435,8 +435,6 @@ enemy-frequency-description=The number of enemies guarding points of interest.
 enemy-size-description=The relative strength of enemies guarding points of interest.
 enemy-expansion-group-tile=[Unused by Satisfactorio]
 evolution=[Unused by Satisfactorio]
-starting-area-size=[color=#cccccc][Unused][/color]
-starting-area-size-description=This setting is not used by Satisfactorio.
 pollution-diffusion-ratio-description=The amount of radiation diffused into neighbouring chunks per second.
 pollution-absorption-modifier-description=Modifier of how much radiation is absorbed by tiles.
 enemy-attack-pollution-consumption-modifier=[color=#cccccc][Unused][/color]
